Editados R2.html y R2.css para que cumplan las consignas

--- a/code/R2.html
+++ b/code/R2.html
@@ -4,7 +4,60 @@
 </head>
 
 <body>
-
+    <main>
+        <div class = "table-container">
+            <div class = "table">
+                <div class = "table-item tableColor1">Lorem ipsum</div>
+                <div class = "table-item tableColor1">dolor sit amet</div>
+                <div class = "table-item tableColor1">consectetur adipiscing</div>
+                <div class = "table-item tableColor1">sed do</div>
+                <div class = "table-item tableColor1">ad minim</div>
+                <div class = "table-item tableColor1">commodo consequat</div>
+                <div class = "table-item tableColor2">ullamco</div>
+                <div class = "table-item tableColor2">23</div>
+                <div class = "table-item tableColor2">54</div>
+                <div class = "table-item tableColor2">12</div>
+                <div class = "table-item tableColor2">64</div>
+                <div class = "table-item tableColor2">24562</div>
+                <div class = "table-item tableColor1">cillum dolore</div>
+                <div class = "table-item tableColor1">32</div>
+                <div class = "table-item tableColor1">65</div>
+                <div class = "table-item tableColor1">23</div>
+                <div class = "table-item tableColor1">41</div>
+                <div class = "table-item tableColor1">84324</div>
+                <div class = "table-item tableColor2">non proident</div>
+                <div class = "table-item tableColor2">34</div>
+                <div class = "table-item tableColor2">12</div>
+                <div class = "table-item tableColor2">63</div>
+                <div class = "table-item tableColor2">24</div>
+                <div class = "table-item tableColor2">15943</div>
+                <div class = "table-item tableColor1">culpa qui</div>
+                <div class = "table-item tableColor1">53</div>
+                <div class = "table-item tableColor1">34</div>
+                <div class = "table-item tableColor1">21</div>
+                <div class = "table-item tableColor1">16</div>
+                <div class = "table-item tableColor1">13535</div>
+                <div class = "table-item tableColor2">mollit anim</div>
+                <div class = "table-item tableColor2">42</div>
+                <div class = "table-item tableColor2">16</div>
+                <div class = "table-item tableColor2">37</div>
+                <div class = "table-item tableColor2">12</div>
+                <div class = "table-item tableColor2">47747</div>
+                <div class = "table-item tableColor1">eiusmod tempor</div>
+                <div class = "table-item tableColor1">39</div>
+                <div class = "table-item tableColor1">38</div>
+                <div class = "table-item tableColor1">54</div>
+                <div class = "table-item tableColor1">86</div>
+                <div class = "table-item tableColor1">23443</div>
+                <div class = "table-item tableColor2">occaecat cupidatat</div>
+                <div class = "table-item tableColor2">58</div>
+                <div class = "table-item tableColor2">96</div>
+                <div class = "table-item tableColor2">86</div>
+                <div class = "table-item tableColor2">57</div>
+                <div class = "table-item tableColor2">15453</div>
+            </div>
+        </div>
+    </main>
 </body>
 
 
